[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Paul Hughes", email = "paul.jeremy.hughes@gmail.com"},
]
dependencies = [
    "numpy>=1.22.3",
    "pandas>=1.4.2",
    "psutil>=5.9.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.5.1",
    "ttkthemes>=3.2.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
